--- a/contact.html
+++ b/contact.html
@@ -1,36 +1,48 @@
+<!DOCTYPE html>
+
+<html lang="en-US">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Jieun's Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-
 	<header>
-		<h1>Your Name</h1>
-		<p>About</p>
-		<p>Portfolio</p>
-		<p>Contact</p>
+		<div class="wrap centered">
+			<h1>Your Name</h1>
+			<nav>
+				<a href="index.html">About</a>  |
+				<a href="portfolio.html">Portfolio</a>  |
+				<a href="contact.html">Contact</a>
+			</nav>
+		</div>
 	</header>
-
-	<div>
-		<h2>Contact</h2>
-		<p>Name</p>
-		<p>Email</p>
-		<p>Message</p>
-		<p class="submit-button">Submit</p>
-	</div>
-
-	<aside>
-		<h3>Connect with Me</h3>
-		<img class="icon" src="assets/images/github.png" alt="Github Link">
-		<img class="icon" src="assets/images/linkedin.png" alt="Linkedin Link">
-		<img class="icon" src="assets/images/stackoverflow.png" alt="Stack Overflow Link">
-	</aside>
-
+	<section class="wrap centered">
+		<div class="maincontent left">
+			<h2>Contact</h2><hr>
+			<form>
+				Name<br><br>
+				<input type="text" name="fullname"><br><br>
+				Email<br><br>
+				<input type="text" name="email"><br><br>
+				Message<br><br>
+				<textarea></textarea><br><br>
+				<input id="submitbutton" type="submit" value="Submit">
+			</form>
+		</div>
+		<aside class="right">
+			<h3>Connect with Me</h3><hr>
+			<a href="http://github.com/rimjieun" target="_blank"><img class="socialicon" src="assets/images/github.png" alt="Github Link"></a>
+			<a href="http://linkedin.com/in/rimjieun" target="_blank"><img class="socialicon" src="assets/images/linkedin.png" alt="Linkedin Link"></a>
+			<a href="http://stackoverflow.com/users/7359423/rimjieun" target="_blank"><img class="socialicon" src="assets/images/stackoverflow.png" alt="Stack Overflow Link"></a>
+		</aside>
+	</section>
 	<footer>
-		<p>Copyright info</p>
+		&copy; Copyright 2016 Jieun Rim
 	</footer>
-
-
 </body>
+
 </html>
