--- a/portfolio.html
+++ b/portfolio.html
@@ -1,37 +1,51 @@
+<!DOCTYPE html>
+
+<html lang="en-US">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Jieun's Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
-
 	<header>
-		<h1>Your Name</h1>
-		<p>About</p>
-		<p>Portfolio</p>
-		<p>Contact</p>
+		<div class="wrap centered">
+			<h1>Your Name</h1>
+			<nav>
+				<a href="index.html">About</a>  |
+				<a href="portfolio.html">Portfolio</a>  |
+				<a href="contact.html">Contact</a>
+			</nav>
+		</div>
 	</header>
-
-	<div>
-		<h2>Portfolio</h2>
-		<img class="footprint" src="assets/images/footprint.jpg">
-		<img class="footprint" src="assets/images/footprint.jpg">
-		<img class="footprint" src="assets/images/footprint.jpg">
-		<img class="footprint" src="assets/images/footprint.jpg">
-		<img class="footprint" src="assets/images/footprint.jpg">
-	</div>
-
-	<aside>
-		<h3>Connect with Me</h3>
-		<img class="icon" src="assets/images/github.png" alt="Github Link">
-		<img class="icon" src="assets/images/linkedin.png" alt="Linkedin Link">
-		<img class="icon" src="assets/images/stackoverflow.png" alt="Stack Overflow Link">
-	</aside>
-
+	<section class="wrap centered">
+		<div class="maincontent left">
+			<h2>Portfolio</h2><hr>
+			<div class="columns">
+				<a href="#"><p class="absolute">Coming soon</p>
+				<img class="placeholder" src="assets/images/footprint.jpg"></a>
+				<a href="#"><p class="absolute">Coming soon</p>
+				<img class="placeholder" src="assets/images/footprint.jpg"></a>
+				<a href="#"><p class="absolute">Coming soon</p>
+				<img class="placeholder" src="assets/images/footprint.jpg"></a>
+				<a href="#"><p class="absolute">Coming soon</p>
+				<img class="placeholder" src="assets/images/footprint.jpg"></a>
+				<a href="#"><p class="absolute">Coming soon</p>
+				<img class="placeholder" src="assets/images/footprint.jpg"></a>
+			</div>
+		</div>
+		<aside class="right">
+			<h3>Connect with Me</h3><hr>
+			<a href="http://github.com/rimjieun" target="_blank"><img class="socialicon" src="assets/images/github.png" alt="Github Link"></a>
+			<a href="http://linkedin.com/in/rimjieun" target="_blank"><img class="socialicon" src="assets/images/linkedin.png" alt="Linkedin Link"></a>
+			<a href="http://stackoverflow.com/users/7359423/rimjieun" target="_blank"><img class="socialicon" src="assets/images/stackoverflow.png" alt="Stack Overflow Link"></a>
+		</aside>
+	</section>
 	<footer>
-		<p>Copyright info</p>
+		&copy; Copyright 2016 Jieun Rim
 	</footer>
-
-
 </body>
+
 </html>
