--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 		<div class="maincontent left">
 			<h2>About Me</h2><hr>
 			<img id="portrait" src="assets/images/portrait.JPG" alt="Profile Picture">
-			<p>Content blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+			<p>Lorem ipsum dolor sit amet, mea nostro nusquam ei, nemore verterem democritum ius ea, id suas argumentum assueverit nam. Ea dico altera vel, eu eam dicat mentitum comprehensam. Te eius pertinax laboramus vim, placerat mnesarchum sed ex. Vis erant harum accommodare eu, harum contentiones nam an. Enim rebum partem at eum, cetero verterem et per, dolores accommodare eu qui.
+			Mandamus deterruisset an ius. Duo dico albucius interesset ea, mea ea oratio definitiones, qui clita graeco iudicabit ei. Nec mutat commodo electram id. Vis mollis maiorum pertinax ut.</p>
 		</div>
 		<aside class="right">
 			<h3>Connect with Me</h3><hr>
