--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 		<div class="wrap centered">
 			<h1>Your Name</h1>
 			<nav>
-				<a href="index.html">About</a>  |
+				<a href="index.html">About</a>  
 				<a href="portfolio.html">Portfolio</a>  |
 				<a href="contact.html">Contact</a>
 			</nav>
