--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 		</div>
 	</header>
 	<section class="wrap centered">
-		<div class="maincontent left">
+		<div class="maincontent">
 			<h2>Contact</h2><hr>
 			<form>
 				Name<br><br>
@@ -33,7 +33,7 @@
 				<input id="submitbutton" type="submit" value="Submit">
 			</form>
 		</div>
-		<aside class="right">
+		<aside>
 			<h3>Connect with Me</h3><hr>
 			<a href="http://github.com/rimjieun" target="_blank"><img class="socialicon" src="assets/images/github.png" alt="Github Link"></a>
 			<a href="http://linkedin.com/in/rimjieun" target="_blank"><img class="socialicon" src="assets/images/linkedin.png" alt="Linkedin Link"></a>
