--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 		</div>
 	</header>
 	<section class="wrap centered">
-		<div class="maincontent left">
+		<div class="maincontent">
 			<h2>Portfolio</h2><hr>
 			<div class="columns">
 				<a href="#"><p class="absolute">Coming soon</p>
@@ -36,7 +36,7 @@
 				<img class="placeholder" src="assets/images/footprint.jpg"></a>
 			</div>
 		</div>
-		<aside class="right">
+		<aside>
 			<h3>Connect with Me</h3><hr>
 			<a href="http://github.com/rimjieun" target="_blank"><img class="socialicon" src="assets/images/github.png" alt="Github Link"></a>
 			<a href="http://linkedin.com/in/rimjieun" target="_blank"><img class="socialicon" src="assets/images/linkedin.png" alt="Linkedin Link"></a>
