--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<div class="wrap centered">
-			<h1>Your Name</h1>
+			<h1>Jieun Rim</h1>
 			<nav>
 				<a href="index.html">About</a>  |
 				<a href="portfolio.html">Portfolio</a>  |
