--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,11 @@
 			<h2>Contact</h2><hr>
 			<form>
 				Name<br><br>
-				<input type="text" name="fullname"><br><br>
+				<input type="text" placeholder=" John Smith" name="fullname"><br><br>
 				Email<br><br>
-				<input type="text" name="email"><br><br>
+				<input type="text" placeholder=" example@gmail.com" name="email"><br><br>
 				Message<br><br>
-				<textarea></textarea><br><br>
+				<textarea placeholder=" Click here to type a message..."></textarea><br><br>
 				<input id="submitbutton" type="submit" value="Submit">
 			</form>
 		</div>
