ready for submission

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header>
-		<div class="wrap centered">
+		<div class="wrapper">
 			<h1>Jieun Rim</h1>
 			<nav>
 				<a href="index.html">About</a>  |
@@ -20,7 +20,7 @@
 			</nav>
 		</div>
 	</header>
-	<section class="wrap centered">
+	<section class="wrapper">
 		<div class="maincontent">
 			<h2>Portfolio</h2><hr>
 			<div class="columns">
