hiding side nav

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
   </section>
 
-  <div id="side-nav">
+<!--   <div id="side-nav">
     <ul class="nav nav-tabs nav-stacked side-nav" role="tablist">
       <li><a href="#home" class="side-nav text-right" id="home-btn">H O M E</a></li>
       <li><a href="#intro" class="side-nav text-right" id="intro-btn">I N T R O</a></li>
@@ -70,7 +70,7 @@
       <li><a href="#portfolio" class="side-nav text-right" id="portfolio-btn">P O R T F O L I O</a></li>
       <li><a href="#contact" class="side-nav text-right" id="contact-btn">C O N T A C T</a></li>
     </ul>
-  </div>
+  </div> -->
 
   <!-- SECTION 2 -->
   <section class="section2 full-page flex-column" id="intro">
