--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="UTF-8">
+  <meta charset='UTF-8'>
   <title>Jieun Rim | Full Stack Developer</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  <link rel='stylesheet' href='./assets/css/reset.css'>
+  <link rel='stylesheet' href='./assets/css/style.css'>
 </head>
 
 <body>
   
   <!-- This is where React will deploy the contents it generates -->
-  <div id="app"></div>
+  <div id='app'></div>
 
   <!-- All of our JS code will be transpiled into this bundle.js file -->
-  <script src="bundle.js"></script>
+  <script src='bundle.js'></script>
   
 </body>
 </html>
