--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,15 @@
   
   <!-- This is where React will deploy the contents it generates -->
   <div id='app'></div>
-
+  
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   <!-- All of our JS code will be transpiled into this bundle.js file -->
   <script src='bundle.js'></script>
+  <script src='https://use.fontawesome.com/6b00624f40.js'></script>
+  <script src='./assets/js/index.js'></script>
   
 </body>
 </html>
