--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset='UTF-8'>
   <title>Jieun Rim | Full Stack Developer</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel='stylesheet' href='./assets/css/reset.css'>
   <link rel='stylesheet' href='./assets/css/style.css'>
   <!-- Devicon CDN -->
