--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  
+  <div class='body-layer'></div>
   <!-- This is where React will deploy the contents it generates -->
   <div id='app'></div>
   
