--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
   <script src='https://use.fontawesome.com/6b00624f40.js'></script>
   <script src='./assets/js/index.js'></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  
+  <script>
+    const recaptchaCallback = () => {
+      $('#submit').removeAttr('disabled');
+    }
+  </script>
+
 </body>
 </html>
