--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <script src='./assets/js/index.js'></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script>
-    const recaptchaCallback = () => {
+    function recaptchaCallback() {
       $('#submit').removeAttr('disabled');
     }
   </script>
