--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script>
     function recaptchaCallback() {
+      console.log('callback working');
       $('#submit').removeAttr('disabled');
     }
   </script>
