--- a/public/index.html
+++ b/public/index.html
@@ -22,18 +22,24 @@
   <script src='bundle.js'></script>
   <script src='https://use.fontawesome.com/6b00624f40.js'></script>
   <script src='./assets/js/index.js'></script>
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
   <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
-  
-  <script>
 
-  var onloadCallback = function() {
-    alert("grecaptcha is ready!");
-  };
+  <script>
 
   function recaptchaCallback() {
     $('#submit').removeAttr('disabled');
   }
+
+  var onloadCallback = function() {
+    console.log('onload working')
+    grecaptcha.render('.g-recaptcha', {
+      sitekey: '6LduwTQUAAAAAEZCA6QbbpQJmltA77oxElfo2k2R',
+      callback: recaptchaCallback
+    });
+  };
+
+  
   </script>
 </body>
 
