--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
   var onloadCallback = function() {
     console.log('onload working')
-    grecaptcha.render('#recaptcha', {
+    grecaptcha.render('recaptcha', {
       sitekey: '6LduwTQUAAAAAEZCA6QbbpQJmltA77oxElfo2k2R',
       callback: recaptchaCallback
     });
