--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <script src='https://use.fontawesome.com/6b00624f40.js'></script>
   <script src='./assets/js/index.js'></script>
   <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
-  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"></script>
+  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
 
   <script>
 
