--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,8 @@
   <div class='body-layer'></div>
   <div id='app'></div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-  <script src='/bundle.js'></script>
+  <script src='./bundle.js'></script>
   <script src='https://use.fontawesome.com/6b00624f40.js'></script>
-  <script src='/assets/js/index.js'></script>
   <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
 </body>
 
