--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='UTF-8'>
   <title>Jieun Rim | Full Stack Developer</title>
-  <link rel='icon' href='./assets/css/img/favicon.ico'>
+  <link rel='shortcut icon' href='http://rimjieun.com/favicon.ico'>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel='stylesheet' href='./assets/css/reset.css'>
