--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
         callback: recaptchaCallback
       });
     };
+    // $(document).on('click', function() {
+    //   $('.fade-in').stop(true);
+    //   alert('click working')
+    // });
   </script>
 </head>
 
