removed document.ready

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <script src='https://use.fontawesome.com/6b00624f40.js'></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script type='text/javascript'>
-    $(document).ready(function() {
+    // $(document).ready(function() {
       function recaptchaCallback() {
       $('#submit').removeAttr('disabled');
       }
@@ -30,7 +30,7 @@
         // $('#profile-pic').finish();
         // $('.fade-in').finish();
       // });
-    });
+    // });
     
   </script>
 </head>
